<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NurseApp</string>
    <string name="welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_information">PatientInformation</string>
    <string name="title_activity_fail_to_access">FailToAccess</string>
    <string name="title_activity_patient_visit_record">PatientVisitRecord</string>
    <string name="title_activity_add_new_visit">AddNewVisit</string>
    <string name="button_search">Search</string>
    <string name="patient_number">Patient number</string>
    <string name="hello_world">none yet</string>
    <string name="display_Info">Patient Info</string>
    <string name="failed">Invalid Patient number</string>
    <string name="Patient_info_list">Birthday, age, name,....</string>
    <string name="buttonRecordNewVisit">Record New Visit</string>
    <string name="buttonPastVisit">View Past Visits</string>
    <string name="visit_record"> load the records</string>
    <string name="title_activity_add_vitals">AddVitals</string>
    <string name="title_activity_search_patient">SearchPatient</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="userinfo">Userinfo</string>
    <string name="hello">Hello!</string>
    <string name="title_activity_doctor">Doctor</string>
    <string name="title_activity_add__new__patient">AddNewPatient</string>
    <string name="name">Name</string>
    <string name="visittime">Visit Time HH:MM:SS</string>
    <string name="BTD">Birthday YYYY-MM-DD</string>
    <string name="HN">Health Number</string>
    <string name="title_activity_patient_info">PatientInfo</string>
    <string name="title_activity_add_prescription">AddPrescription</string>
    <string name="prescription">Prescription</string>
    <string name="title_activity_view_urgency_list">ViewUrgencyList</string>
    <string name="urgencylist">urgencylist</string>
    <string name="title_activity_add_doctor_visit">AddDoctorVisit</string>
    <string name="title_activity_add_new_patient">AddNewPatient</string>
    <string name="title_activity_patient_info_for_physician">PatientInfoForPhysician</string>
    <string name="title_activity_physician_search">PhysicianSearch</string>

</resources>